--- a/news.html
+++ b/news.html
@@ -5,34 +5,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>الأخبار – Khotwa</title>
 
+  <!-- CSS -->
   <link rel="stylesheet" href="/assets/main.css">
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
   <link rel="stylesheet" href="/assets/enhanced-navbar.css">
 
+  <!-- API -->
   <script src="/assets/khotwa-api.js"></script>
 </head>
 
 <body>
 
+<!-- ================= NAVBAR ================= -->
 <nav class="navbar">
   <div class="container nav-inner">
     <a class="brand" href="/index.html">
       <img src="/assets/apple-touch-icon.png" class="logo" alt="Logo">
-      <span>مجلس طلاب خطوة</span>
+      <span data-lang="ar">مجلس طلاب خطوة</span>
+      <span data-lang="en" hidden>Khotwa Student Council</span>
     </a>
+
+    <button id="menu-toggle" class="menu-toggle">
+      <svg viewBox="0 0 24 24" width="24" height="24" fill="none"
+           stroke="currentColor" stroke-width="2">
+        <path d="M4 6h16M4 12h16M4 18h16"></path>
+      </svg>
+    </button>
+
+    <div class="nav-links" id="primary-nav">
+      <a href="/index.html">الرئيسية</a>
+      <a href="/news.html" class="active">الأخبار</a>
+      <a href="/events.html">الفعاليات</a>
+      <a href="/calendar.html">التقويم</a>
+      <button class="lang-toggle" id="lang-toggle">English</button>
+    </div>
   </div>
 </nav>
 
+<!-- ================= MAIN ================= -->
 <main class="container" id="main">
 
-  <header>
-    <h1>الأخبار</h1>
-    <p class="muted">كل جديد عن مجلس طلاب خطوة</p>
+  <header style="text-align:center; padding:3rem 0;">
+    <h1 data-lang="ar">الأخبار</h1>
+    <h1 data-lang="en" hidden>News</h1>
+    <p class="muted" data-lang="ar">كل جديد عن مجلس طلاب خطوة</p>
+    <p class="muted" data-lang="en" hidden>All the latest from Khotwa Student Council</p>
   </header>
 
-  <div class="tools">
-    <input id="q" type="search" placeholder="ابحث في الأخبار…">
+  <!-- Filters -->
+  <div class="tools" style="margin-bottom:2rem;">
+    <input id="q" type="search" placeholder="ابحث في الأخبار…" />
 
     <button class="chip" data-filter="all" data-active="true">الكل</button>
     <button class="chip" data-filter="ann">إعلانات</button>
@@ -40,8 +63,9 @@
     <button class="chip" data-filter="media">تغطيات</button>
   </div>
 
+  <!-- News Grid -->
   <section>
-    <div class="grid grid-3" id="posts">
+    <div class="events-grid" id="posts">
       <div class="skeleton"></div>
       <div class="skeleton"></div>
       <div class="skeleton"></div>
@@ -50,12 +74,34 @@
 
 </main>
 
-<footer class="footer">
+<!-- ================= FOOTER ================= -->
+<footer style="background:#f8fafc; border-top:1px solid #e2e8f0; padding:3rem 0; margin-top:4rem;">
   <div class="container">
-    © <span id="year"></span> Khotwa Student Council
+    <div style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:2rem;">
+      <div>
+        <strong data-lang="ar">مجلس طلاب خطوة</strong>
+        <strong data-lang="en" hidden>Khotwa Council</strong>
+        <p style="font-size:0.9rem; color:#64748b;">
+          © <span id="year"></span> |
+          <span data-lang="ar">ملبورن، أستراليا</span>
+          <span data-lang="en" hidden>Melbourne, Australia</span>
+        </p>
+      </div>
+      <div style="display:flex; gap:1.5rem;">
+        <a href="https://instagram.com/khotwa.sc"
+           style="color:#e1306c; font-weight:bold; text-decoration:none;">
+          Instagram
+        </a>
+        <a href="/contact.html" style="color:var(--primary); text-decoration:none;">
+          <span data-lang="ar">تواصل معنا</span>
+          <span data-lang="en" hidden>Contact</span>
+        </a>
+      </div>
+    </div>
   </div>
 </footer>
 
+<!-- ================= SCRIPTS ================= -->
 <script>
 document.getElementById("year").textContent = new Date().getFullYear();
 
@@ -67,6 +113,7 @@ let currentQuery = "";
 let currentCategory = "all";
 
 async function loadNews() {
+  const lang = localStorage.getItem("khotwa_lang") || "ar";
   postsEl.innerHTML = "<p class='muted'>Loading…</p>";
 
   let items;
@@ -88,17 +135,33 @@ async function loadNews() {
   postsEl.innerHTML = "";
 
   items.forEach(item => {
+    const title =
+      lang === "ar"
+        ? item.titleAr || item.titleEn || ""
+        : item.titleEn || item.titleAr || "";
+
+    const content =
+      lang === "ar"
+        ? item.contentAr || item.contentEn || ""
+        : item.contentEn || item.contentAr || "";
+
     const card = document.createElement("article");
-    card.className = "post";
+    card.className = "event-card";
+    card.style.cursor = "pointer";
+
     card.innerHTML = `
-      <h3>${item.titleAr || item.titleEn || ""}</h3>
-      <p class="muted">
-        ${(item.contentAr || "").substring(0,120)}...
-      </p>
+      <div class="card-body">
+        <h3>${title}</h3>
+        <p class="muted">
+          ${content.substring(0,120)}${content.length > 120 ? "..." : ""}
+        </p>
+      </div>
     `;
+
     card.onclick = () => {
-      location.href = `/news-detail.html?id=${item.id}`;
+      location.href = \`/news-detail.html?id=\${item.id}\`;
     };
+
     postsEl.appendChild(card);
   });
 }
@@ -119,6 +182,9 @@ chips.forEach(btn => {
 
 loadNews();
 </script>
+
+<script src="/js/menu-toggle.js"></script>
+<script src="/js/language-toggle.js"></script>
 
 </body>
 </html>
